# substreams-evm

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
clickhouse-blocks/: Cargo.toml  Makefile
clickhouse-evm-balances/: Cargo.toml  Makefile  schema.1.table.balances.sql  schema.2.mv.historical-balances.sql  schema.2.mv.historical-erc20-balances.sql  schema.3.view.historical-balances.sql  schema.3.view.historical-erc20-balances.sql  schema.4.mv.historical-native-balances.sql  substreams.yaml
clickhouse-evm-dex/: Cargo.toml  Makefile  build  schema.0.blocks.sql  schema.0.templates.sql  schema.1.table.balancer.sql  schema.1.table.bancor.sql  schema.1.table.cow.sql  schema.1.table.curvefi.sql  schema.1.table.polymarket.sql  schema.1.table.sunpump_swaps.sql  schema.1.table.uniswap_v1.sql  schema.1.table.uniswap_v2.sql  schema.1.table.uniswap_v3.sql  schema.1.table.uniswap_v4.sql  schema.2.mv.pools.sql  schema.2.mv.state_pools_fees.sql  schema.2.mv.state_pools_initialize.sql  schema.2.mv.swaps.sql  schema.2.table.pools_fees.sql  schema.2.table.state_pools_fees.sql  schema.2.table.state_pools_initialize.sql  schema.3.mv.ohlc_prices.sql  schema.3.mv.state_ohlc_prices.sql  schema.3.mv.state_pool_activity_summary.sql  schema.3.mv.state_pools_aggregating_by_pool.sql  schema.3.mv.state_pools_aggregating_by_token.sql  schema.3.mv.state_pools_tokens.sql  schema.3.mv.state_pools_uaw.sql  schema.3.view.pools.sql  schema.4.view.ohlc_prices.sql  schema.4.view.pools.sql  substreams.yaml
clickhouse-evm-transfers/: Cargo.toml  Makefile  schema.0.blocks.sql  schema.0.templates.sql  schema.1.table.erc20_transfer.sql  schema.1.table.erc20_transfers.sql  schema.1.table.native_transfer.sql  schema.1.table.native_transfers.sql  schema.1.table.steth.sql  schema.1.table.transactions.sql  schema.1.table.transfers.sql  schema.1.table.usdt.sql  schema.1.table.weth.sql  schema.2.mv.native_transfers.sql  schema.2.mv.transfers.sql  substreams.yaml
common/: Cargo.toml
common/src/: clickhouse.rs  create.rs  lib.rs
common/tests/: create_log_tests.rs
contracts/: Cargo.toml  Makefile  README.md  substreams.yaml
contracts/src/: lib.rs
db-blocks-clickhouse/: Cargo.toml  substreams.yaml
db-evm-balances/: Cargo.toml  Makefile  substreams.yaml
db-evm-balances-clickhouse/: Makefile  schema.1.table.balances.sql  schema.2.mv.refresh.balances.sql  schema.3.view.historical-erc20-balances.sql  substreams.yaml
db-evm-balances-postgres/: Makefile  docker-compose.yml  schema.sql  substreams.yaml
db-evm-dex-clickhouse/: schema.1.table.aerodrome.sql  schema.1.table.balancer.sql  schema.1.table.dca_dot_fun.sql  schema.1.table.dodo.sql  schema.1.table.sunpump.sql  schema.2.mv.swaps.sql  schema.3.mv.state_ohlc_prices.sql  substreams.yaml  (+2 more)
db-evm-supply/: Cargo.toml  substreams.yaml
db-evm-supply/src/: lib.rs  supply.rs
dex-swaps/: Cargo.toml  Makefile  substreams.yaml
dex-swaps/src/: aerodrome.rs  balancer.rs  bancor.rs  cow.rs  curvefi.rs  dodo.rs  kyber_elastic.rs  lib.rs  logs.rs  sunpump.rs  traderjoe.rs  uniswap_v1.rs  uniswap_v2.rs  uniswap_v3.rs  uniswap_v4.rs  utils.rs  woofi.rs
dex/dex-pools/: Cargo.toml  substreams.yaml
dex/dex-pools/src/: lib.rs
dex/dex-swaps/: Cargo.toml  substreams.yaml
dex/dex-swaps/src/: lib.rs
dex/sunpump/: Cargo.toml  Makefile  substreams.yaml
dex/sunpump/src/: lib.rs  store.rs
dex/uniswap-v1/: Cargo.toml  Makefile  substreams.yaml
dex/uniswap-v1/src/: lib.rs  store.rs
erc20-balances/: .substreams.env  Cargo.toml  Makefile  README.md  substreams.yaml
erc20-balances/src/: calls.rs  lib.rs
erc20-tokens/: Cargo.toml  Makefile  substreams.yaml
erc20-tokens/contracts/avalanche/: usdt.sol
erc20-tokens/contracts/eth/: usdc.sol
erc20-tokens/src/: lib.rs
erc20-transfers/: Cargo.toml  Makefile  README.md  substreams.yaml
erc20-transfers/src/: lib.rs
erc4626/: Cargo.toml  Makefile  README.md  substreams.yaml
erc4626/flows/: Cargo.toml  Makefile  README.md  substreams.yaml
erc4626/flows/src/: lib.rs
erc4626/src/: lib.rs
erc721/tokens/: Cargo.toml  Makefile  README.md  substreams.yaml
erc721/tokens/src/: lib.rs
erc721/transfers/: Cargo.toml  Makefile  README.md
erc721/transfers/src/: lib.rs
evm-contracts/: Cargo.toml  substreams.yaml
evm-contracts/clickhouse/: Makefile  schema.0.contracts.sql  schema.sql  substreams.yaml
evm-contracts/postgres/: Makefile  schema.sql  substreams.yaml
evm-contracts/src/: lib.rs
evm-dex-foundational-store/: Cargo.toml  README.md  substreams.yaml
evm-nfts/: Cargo.toml  Makefile  substreams.yaml
evm-nfts/clickhouse/: Makefile  schema.0.templates.sql  schema.1.events.cryptopunks.sql  schema.1.events.erc721.sql  schema.1.events.seaport.sql  schema.2.events.erc1155.sql  schema.2.view.erc721.sql  schema.2.view.erc721_cryptopunks.sql  schema.3.view.erc1155.sql  substreams.yaml
evm-nfts/postgres/: Makefile  schema.sql  substreams.yaml
evm-nfts/src/: cryptopunks.rs  erc1155.rs  erc1155_metadata.rs  erc721.rs  erc721_metadata.rs  lib.rs  seaport.rs  to_json.rs
evm-supply/: Cargo.toml  Makefile  README.md  substreams.yaml
evm-supply/clickhouse/: Makefile  schema.2.mv.historical-supply.sql  schema.3.view.historical-supply.sql  substreams.yaml
evm-supply/postgres/: Makefile  schema.sql  substreams.yaml
evm-supply/src/: calls.rs  lib.rs
evm-x402/: Cargo.toml  Makefile  README.md  substreams.yaml
evm-x402/clickhouse/: Makefile  README.md  schema.0.blocks.sql  schema.0.templates.sql  schema.1.table.x402_payments.sql  schema.2.mv.state_x402.sql  schema.2.mv.state_x402_totals_by_facilitator.sql  schema.2.mv.state_x402_totals_by_recipient.sql  schema.3.mv.state_x402_volume_by_facilitator_recipient.sql  schema.3.view.state_x402.sql  substreams.yaml
evm-x402/src/: lib.rs
native-balances/: Cargo.toml  Makefile  substreams.yaml
native-balances/src/: lib.rs  utils.rs
seaport/: Cargo.toml  substreams.yaml
steth/: Cargo.toml  README.md  substreams.yaml
steth/src/: lib.rs
webhook-ohlc/: Cargo.toml  README.md  packages  substreams.yaml
webhook-ohlc/src/: lib.rs
(+647 files in other folders)
