[workspace]
members = [
  # DB (engine-agnostic)
  "db-evm-balances",
  "db-evm-supply",
  "db-evm-transfers",
  "db-evm-dex",

  # Clickhouse
  "db-blocks-clickhouse",

  # Tokens
  "erc20-transfers",
  "native-transfers",
  "erc20-balances",
  "native-balances",
  "erc20-supply",

  # Tron DEX
  "dex/sunpump",

  # Ethereum DEX
  "dex/balancer",
  "dex/curvefi",
  "dex/bancor",
  "dex/cow",

  # Uniswap DEX
  "dex/uniswap-v1",
  "dex/uniswap-v4",
  "dex/uniswap-v2",
  "dex/uniswap-v3",

  # NFT
  "erc1155",

  # Protocol-specific
  "erc20-tokens",

  # Common
  "proto",
  "common",
]
resolver = "2"

[workspace.package]
description = "EVM Substreams modules"
edition = "2021"
version = "0.0.0"
license = "Apache-2.0"

[workspace.dependencies]
substreams = "0.7.0"
substreams-abis = { git = "https://github.com/pinax-network/substreams-abis.git", tag = "v0.8.0" }
substreams-ethereum = "0.11.1"
substreams-database-change = "3.0.0"
prost = "0.13"
prost-types = "0.13"

[profile.release]
lto = true
