[workspace]
members = [
  # DB (engine-agnostic)
  "evm-balances",
  "evm-supply",
  "evm-transfers",
  "evm-dex",
  "evm-dex-foundational-store",

  # Clickhouse
  "blocks/clickhouse",

  # Tokens
  "erc20/transfers",
  "erc20/balances",
  "erc20/supply",
  "erc20/tokens",

  "native/transfers",
  "native/balances",

  # Normalized DEX
  "dex-swaps",

  # Tron DEX
  "dex/sunpump",

  # Ethereum DEX
  "dex/aerodrome",
  "dex/balancer",
  "dex/dodo",
  "dex/kyber-elastic",
  "dex/traderjoe",
  "dex/woofi",
  "dex/curvefi",
  "dex/bancor",
  "dex/cow",

  # Uniswap DEX
  "dex/uniswap-v1",
  "dex/uniswap-v4",
  "dex/uniswap-v2",
  "dex/uniswap-v3",

  # NFT
  "erc1155",
  "dex-nfts/seaport",
  "evm-nfts",
  "erc721/tokens",
  "erc721/transfers",

  # Protocol-specific
  "contracts",

  # Contracts
  "evm-contracts",

  # Common
  "proto",
  "common",
]
resolver = "2"

[workspace.package]
description = "EVM Substreams modules"
edition = "2021"
version = "0.0.0"
license = "Apache-2.0"

[workspace.dependencies]
substreams = "0.7.0"
substreams-abis = { git = "https://github.com/pinax-network/substreams-abis.git", tag = "v1.5.0" }
substreams-ethereum = "0.11.1"
substreams-database-change = "3.0.0"
prost = "0.13"
prost-types = "0.13"

[profile.release]
lto = true
