[package]
name = "contracts"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common" }
proto = { path = "../proto" }
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
