[package]
name = "dex-swaps"
description = { workspace = true }
edition = { workspace = true }
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-abis = { workspace = true }
substreams-ethereum = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
proto = { path = "../proto" }
