[package]
name = "dex-swaps"
description = { workspace = true }
edition = { workspace = true }
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
substreams-abis = { workspace = true }
substreams-ethereum = { workspace = true }
common = { path = "../common" }
proto = { path = "../proto" }
