[package]
name = "erc20-tokens"
description = "ERC-20 Token-specific Events (DAI, SAI, USDC, USDT, WBTC, WETH, aeWETH, stETH)"
edition = { workspace = true }
version = { workspace = true }
authors = ["Denis <denis@pinax.network>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-abis = { workspace = true }
proto = { path = "../proto" }
common = { path = "../common" }
