[package]
name = "evm-dex-foundational-store"
description = { workspace = true }
edition = { workspace = true }
version = "0.6.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
proto = { path = "../proto" }
substreams = { workspace = true }
