[package]
name = "evm-nfts"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-database-change = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde_json = "1"

proto = { path = "../proto" }
common = { path = "../common" }
