[package]
name = "db-evm-supply"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-database-change = "4.0.0"

proto = { path = "../proto" }
common = { path = "../common" }

prost = { workspace = true }
prost-types = { workspace = true }
