[package]
name = "native-balances"
description = "EVM Native Balances"
edition = { workspace = true }
version = { workspace = true }
authors = ["Denis <denis@pinax.network>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
proto = { path = "../proto" }
common = { path = "../common" }
