[package]
name = "seaport"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-abis = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

proto = { path = "../proto" }
common = { path = "../common" }
