[package]
name = "webhook-ohlc"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
proto = { path = "../proto" }
common = { path = "../common" }
hex = "0.4"
