[package]
name = "dex-pools"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
proto = { path = "../../proto" }
common = { path = "../../common" }
