[package]
name = "dex-swaps"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
prost = { workspace = true }
proto = { path = "../../proto" }
common = { path = "../../common" }
