[package]
name = "sunpump"
description = "SunPump LaunchPad Events"
edition = { workspace = true }
version = "0.6.0"
authors = ["Denis <denis@pinax.network>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-abis = { workspace = true }
proto = { path = "../../proto" }
common = { path = "../../common" }
prost = { workspace = true }
