[package]
name = "uniswap-v1"
description = { workspace = true }
edition = { workspace = true }
version = "0.6.0"
authors = ["Denis <denis@pinax.network>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-abis = { workspace = true }
proto = { path = "../../proto" }
common = { path = "../../common" }
