[package]
name = "erc721-tokens"
description = "ERC-721 Token Events including CryptoPunks"
edition = { workspace = true }
version = { workspace = true }
authors = ["Denis <denis@pinax.network>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-abis = { workspace = true }
proto = { path = "../../proto" }
common = { path = "../../common" }
